--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,14 +3,12 @@
 }
 
 main {
-  padding: 20px;
-  height: 100%;
+  padding: 10px;
 }
 
 html {
   height: 100%;
 }
-
 
 li {
   display: flex;
@@ -49,9 +47,7 @@ nav ul li a:hover {
   background: #bdbdbd;
 }
 
-main {
-  margin-bottom: 1.5em;
-}
+
 
 .form-inner {
   width: 60%;
@@ -65,6 +61,10 @@ main {
 
 .form-inner form > * + * {
   margin-top: 0.2em;
+}
+
+.flex-child > p {
+  padding: 2px;
 }
 
 
@@ -92,9 +92,22 @@ main {
   flex-basis: 50%;
 }
 
+.cards {
+  width: 100%;
+  padding: 10px 15px;
+  border-radius: 2px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin-top: 0.5em;
+  background-color: #fff;
+}
+
 .cards a {
   color: #010000;
   text-decoration: underline;
+}
+
+.cards:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .center {
@@ -224,13 +237,7 @@ footer {
   color: white;
 }
 
-.cards {
-  padding: 10px 15px;
-  border-radius: 2px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin-top: 0.5em;
-  background-color: #fff;
-}
+
 
 dl {
   margin-bottom: 0;
@@ -297,7 +304,7 @@ dd {
 }
 
 /* Media queries for smaller screens */
-
+/* 
 @media screen and (max-width: 768px) {
   .flex-container {
     flex-direction: column;
@@ -310,4 +317,4 @@ dd {
   .form-inner {
     max-width: 100%;
   }
-}
+} */
