--- a/views/pages/createDepartment.handlebars
+++ b/views/pages/createDepartment.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Department {{formname}} form</h1>
-<form class="form-create" id="department-create-form" method="POST">
+<form class="form-create" id="department-form" data-function="{{form_type}}" data-departmentID="{{department._id}}" method="POST">
     <p>* Required</p>
     <label for="department-name">Name*</label>
     <input class="form-input" id="department-name" name="department-name" type="text" placeholder="Department Name"
@@ -86,7 +86,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="modal-title" id="modal-title"></h2>
+                <h2 class="modal-title"></h2>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
