--- a/views/pages/createDepartment.handlebars
+++ b/views/pages/createDepartment.handlebars
@@ -76,6 +76,8 @@
         </div>
     </div>
     <input type="submit" class="submit-button" value="Create">
+    <button type="button" class="submit-button" id="back-btn">Back</button>
+
 </form>
 
 <div id="error-form" hidden></div>
